# HyoDo

./: .coverage  .env.example  .env.minimal  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FINAL_IMPROVEMENTS_SUMMARY_v3.1.0.md  IMPROVEMENTS_v3.1.0.md  LICENSE.md  MIGRATION.md  PHILOSOPHY.md  QUICK_START.md  QUICK_START_SIMPLE.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SECURITY_PATCHES.md  TEST_RESTRUCTURING_PLAN.md  VERSION  docker-compose.minimal.yml  install.sh  install_interactive.sh  pyproject.toml  verify_transplant.py
.claude-plugin/: plugin.json
afo_core/: .cursorrules  .env.example  AGENTS.md  README.md  conftest.py  pyproject.toml  pyright_report.json  requirements-ci-lite.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt  requirements_minimal.txt  server_output.txt
afo_core/AFO/: julie_cpa_pillar_evaluation.py  kms  librarian_agent.py  llms  mathematical_tools.py  meritocracy_router.py  multimodal_collaboration_workflow.py  prometheus.py  pyright_baseline.txt  qlora_trainer_service.py  scholars
afo_core/AFO/agents/: heo_jun_core.py
afo_core/AFO/backoff/: async_backoff.py
afo_core/AFO/cli/: main.py
afo_core/AFO/constitution/: constitution_v1_0.py
afo_core/AFO/core/: resilience.py
afo_core/AFO/evidence/: bundle.py
afo_core/AFO/evolution/: evolution_gate.py
afo_core/AFO/irs/: __init__.py  auto_updater.py  change_detector.py  document_crawler.py  encryption_utils.py  evidence_bundle_extended.py  hash_verifier.py  irs_monitor_agent.py  notification_service.py  notification_template.py  production_config.py  security_gate.py
afo_core/AFO/metrics/: __init__.py  api_metrics.py  organ_metrics.py  trinity_metrics.py
afo_core/AFO/models/: learning_log.py
afo_core/AFO/serenity/: context_guard.py  visual_agent.py
afo_core/afo_soul_engine/routers/: onboarding.py
afo_core/api/compat/: __init__.py  facade.py
afo_core/api/routers/: ai_diagram.py.backup  cache.py.backup  client_stats.py.backup  collaboration.py.backup  compat.py.backup  core_analysis.py.backup  council.py  council.py.backup  debugging.py.backup  decree_router.py.backup  discord_router.py.backup  evolution_router.py  evolution_router.py.backup  external_router.py.backup  family.py.backup  gen_ui_new.py.backup  got.py.backup  grok_stream.py.backup  intake.py.backup  kakao_router.py.backup  learning_log_router.py  learning_log_router.py.backup  learning_pipeline.py.backup  log_analysis.py  log_analysis.py.backup  matrix.py.backup  modal_data.py  modal_data.py.backup  multi_agent.py  multi_agent.py.backup  multimodal.py  multimodal.py.backup  n8n.py.backup  personas.py  personas.py.backup  public_sandbox_router.py.backup  rag_query.py.backup  root.py.backup  skills.py  skills.py.backup  (+3 more)
afo_core/api/routes/: dspy.py  integrity_check.py  philosophical_copilot.py  pillars.py  system_health.py  trinity_policy.py
afo_core/application/trinity/: debate_service.py  metacognitive_service.py
afo_core/cache/: swr_cache.py
afo_core/config/: family_hub.yaml  gemini_gem_config.py  settings.py
afo_core/docs/: AFO_LANGGRAPH_CONSTITUTION.md  OBSIDIAN_QUICK_START.md
afo_core/docs/afo/: API_WALLET_FINAL_STATUS.md  API_WALLET_KNOWLEDGE_COMPLETE.md  API_WALLET_KNOWLEDGE_REPORT.md  API_WALLET_POSTGRESQL_INTEGRATION.md  API_WALLET_STATUS_CHECK.md  DOCUMENTATION_INDEX.md  HYBRID_STRATEGY_COMPLETE.md  OBSIDIAN_COMPLETE_FINAL.md  OBSIDIAN_FINAL_VERIFICATION_COMPLETE.md  OBSIDIAN_OPTIMIZATION_COMPLETE_SUMMARY.md  OBSIDIAN_OPTIMIZATION_FINAL_SUMMARY.md  OBSIDIAN_PLUGINS_MANUAL_INSTALL_GUIDE.md  OBSIDIAN_PLUGINS_STATUS_CHECK.md  OBSIDIAN_RAG_GOT_ALL_COMPLETE.md  OBSIDIAN_RAG_GOT_API_WALLET_INTEGRATION.md  OBSIDIAN_RAG_GOT_COMPLETE.md  OBSIDIAN_RAG_GOT_COMPLETE_FINAL.md  OBSIDIAN_RAG_GOT_COMPLETE_VERIFICATION.md  OBSIDIAN_RAG_GOT_CONNECTION_IMPLEMENTATION.md  OBSIDIAN_RAG_GOT_CONNECTION_STATUS.md  OBSIDIAN_RAG_GOT_DEPENDENCIES_INSTALLED.md  OBSIDIAN_RAG_GOT_FINAL_COMPLETE.md  OBSIDIAN_RAG_GOT_FINAL_IMPLEMENTATION.md  OBSIDIAN_RAG_GOT_FINAL_REPORT.md  OBSIDIAN_RAG_GOT_FINAL_VERIFICATION.md  OBSIDIAN_RAG_GOT_FOLDER_MIGRATION_COMPLETE.md  OBSIDIAN_RAG_GOT_FOLDER_REORGANIZATION.md  OBSIDIAN_RAG_GOT_KNOWLEDGE_REPORT.md  OBSIDIAN_RAG_GOT_REPOSITORY_REORGANIZATION.md  OBSIDIAN_RAG_GOT_TEST_VERIFICATION.md  OBSIDIAN_RAG_GOT_TEST_VERIFICATION_COMPLETE.md  OBSIDIAN_SETUP_FINAL_COMPLETE.md  REFACTORING_ANALYSIS_REPORT.md  REFACTORING_VERIFICATION_COMPLETE.md  REPOSITORY_ANALYSIS.md  WORKFLOW_SYNC_GUIDE.md
afo_core/domain/: persona.py
afo_core/domain/ai/: prompts.py
afo_core/domain/metrics/: trinity.py  trinity_manager.py  trinity_ssot.py
afo_core/domain/scholars/: loader.py
afo_core/domain/serenity/: genui_orchestrator.py
afo_core/domain/trinity/: models.py
afo_core/input_server/: api.py  core.py
afo_core/llms/: claude_cli.py  codex_cli.py
afo_core/ollama/: Modelfile.python-expert  Modelfile.ux-copywriter
afo_core/scripts/: README.md  check_mcp_servers_health.py  dev_env.sh  grok_com_capture.py  kingdom_identity_memory.py  provision_ph_fin_01_julie_cpa.sh  provision_ph_se_05_visual_ssot.sh  security_scanner.py  test_email_notification.py
afo_core/services/: antigravity_engine.py  automated_debugging_system.py  debugging_agent.py  detailed_pillars_calculator.py  irs_client.py  irs_monitor_service.py  kakao_bridge_service.py  langsmith_mentor.py  log_analysis.py  pdf_parsing_service.py  persona_service.py  redis_cache_service.py  system_monitoring_dashboard.py  trinity_calculator.py  verification_engines.py  vision_service.py
afo_core/tests/: README.md  test_async_offloading.py  test_coverage_sweep.py  test_hybrid_rag_advanced.py  test_input_server.py  test_persona_performance.py  test_persona_service_integration.py  test_qlora_platform.py  test_rag_query_router.py  test_tigers_orchestrator.py
afo_core/tigers/: __init__.py  huang_zhong.py  zhang_fei.py  zhao_yun.py
afo_core/utils/: container_detector.py  lazy_imports.py  metrics.py  safe_ops.py  ssot_drift_guard.py  trinity_type_validator.py  vector_store.py
(+302 files in other folders)
