[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyodo"
version = "3.1.8"
description = "Model-agnostic quality-gate kit for AI-assisted developers"
readme = "README.md"
license = "MIT"
authors = [
    { name = "AFO Kingdom" }
]
keywords = [
    "ai",
    "code-quality",
    "claude",
    "model-agnostic",
    "codex",
    "grok",
    "gemini",
    "claude-code",
    "automation",
    "trinity-score",
    "hygook-v5",
    "llm",
    "cli",
    "code-review"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pyright>=1.1",
    "build>=1.2",
    "twine>=5.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "PyYAML>=6.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
hyodo = "hyodo.cli.main:app"

[project.urls]
Homepage = "https://github.com/lofibrainwav/HyoDo"
Documentation = "https://github.com/lofibrainwav/HyoDo#readme"
Repository = "https://github.com/lofibrainwav/HyoDo"
Issues = "https://github.com/lofibrainwav/HyoDo/issues"
Changelog = "https://github.com/lofibrainwav/HyoDo/blob/main/CHANGELOG.md"
Security = "https://github.com/lofibrainwav/HyoDo/blob/main/SECURITY.md"

[tool.hatch.build.targets.wheel]
packages = ["hyodo"]

# Public sdist must NOT ship afo_core (advisory tree) or repo tooling noise.
[tool.hatch.build.targets.sdist]
only-include = [
  "hyodo",
  "tests",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "VERSION",
  "pyproject.toml",
  "SECURITY.md",
  "CONTRIBUTING.md",
  "CODE_OF_CONDUCT.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Public package tests only. afo_core tests are advisory (run explicitly if needed).
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (DB, API)",
    "e2e: End-to-end tests (slow)",
    "slow: Slow tests",
    "skip_ci: Skip in CI",
]

[tool.coverage.run]
source = ["hyodo"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/scripts/*",
]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def __repr__",
]
